--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/image.jpg", width="200" height="200", alt="error"></td>
+        <td><img src="C:\Users\sakshi\Desktop\web development\html-personal site\images\image.jpg", width="200" height="200", alt="error"></td>
         <td><h1>Sakshi Dave</h1>
         <p> <i>Student at university </i></p>
         <p>Hello everyone.This is my first learning lesson. happy to see it.</p></td>
